--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-groq_api_key = "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"
-GOOGLE_API_KEY = "AIzaSyDjbtxZSm0wqLbTDwJE_UdLw-ersNJhGyo"
+groq_api_key = "Your_groq_api_key"
+GOOGLE_API_KEY = "Your_google_api_key"
